GNOME Bugzilla – Bug 611207
Uses the org.gnome.SessionManager Presence name owner, instead of name
Last modified: 2010-06-21 19:37:21 UTC
Created attachment 154778 [details] [review] Patch gnome-screensaver uses a name *owner* proxy when connecting to the session manager's presence interface. This isn't a good idea because it means if the session manager restarts or starts after the screensaver then the proxy is dead. Because the connection to the session manager is stateless, we don't need a proxy connected to the name owner. Attaching a patch to use dbus_g_proxy_new_for_name(), which lets the session manager restart or start after the screensaver and still work. Also neither dbus_g_proxy_new_for_name or _new_from_proxy can fail, so the patch removes the NULL return case.
Yeah seems fine. Pushed to master. Thanks.