Don't user name owner proxies for SessionManager

Using proxies based on the name owner will fail if the name owner changes, for
example if gnome-session is started after the screensaver or if gnome-session is
restarted.

https://bugzilla.gnome.org/show_bug.cgi?id=611207